demo/manifests/3-request-routing/header-based-routing/nginx-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-header-routing
  namespace: nginx-demo
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["nginx-header.apps.example.com"]
  rules:
    - matches:
        - headers:
            - type: Exact
              name: conversation-time
              value: bye
      backendRefs:
        - name: nginx-bye-service
          port: 80
    - matches:
        - headers:
            - type: Exact
              name: conversation-time
              value: hello
      backendRefs:
        - name: nginx-hello-service
          port: 80
    - backendRefs:
        - name: nginx-hello-service
          port: 80
